Added config to surefire for fork bug